# OptiGob

./: .gitignore  .readthedocs.yml  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENT_SUMMARY.md  INPUT_VARIABLES.md  INSTALLATION.md  LIMITATIONS.md  README.md  goals.md  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  conf.py  example.ipynb  index.md  input_variables.md  limitations.md  make.bat  requirements.txt
docs/data/: sip.yaml
docs/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  input_variables.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
joss_paper/data/: sip.yaml
joss_paper/figures/: flow.xml
joss_paper/notebook/: 01_joss_generation.ipynb  01_joss_generation.py
joss_paper/paper/: paper.bib  paper.md
joss_paper/utils/: config.py  helpers.py
src/optigob/: __init__.py  (+1 more)
tests/: .retest.py  Makefile  example.py  logging_example.py  test_baseline_budget_model.py  test_baseline_livestock.py  test_baseline_other_land.py  test_bioenergy.py  test_biomethane.py  test_budget_model.py  test_bugs_enhanced.py  test_co2e_budget_confirmation.py  test_database_manager.py  test_econ_output.py  test_forest.py  test_input_helper.py  test_input_query.py  test_input_validation.py  test_land_area_budget_model.py  test_livestock_budget_model.py  test_livestock_scaler.py  test_optigob.py  test_optimiser.py  test_otherland.py  test_protein_crops_budget.py  test_static_ag.py  test_substitution.py  test_zero_budget_message.py  visuals_sankey.py
(+134 files in other folders)
